[gd_scene format=3 uid="uid://bcwervk3j6pcn"]

[ext_resource type="Script" uid="uid://dibupvuguoa1y" path="res://autoload/FIGHTLEVEL.gd" id="1_q3xvm"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ground"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_left"]
normal = Vector2(1, 0)
distance = -502.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_right"]
normal = Vector2(-1, 0)
distance = -1510.0

[node name="Level1" type="Node2D" unique_id=785227904]
script = ExtResource("1_q3xvm")

[node name="ArenaCamera" type="Camera2D" parent="." unique_id=1372679635]
position = Vector2(500, 0)
zoom = Vector2(0.8, 0.8)

[node name="Background" type="ColorRect" parent="." unique_id=108755039]
offset_left = -1000.0
offset_top = -600.0
offset_right = 2000.0
offset_bottom = 600.0
color = Color(0.2, 0.25, 0.35, 1)

[node name="Ground" type="StaticBody2D" parent="." unique_id=427963491]
position = Vector2(0, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground" unique_id=906710165]
shape = SubResource("WorldBoundaryShape2D_ground")

[node name="GroundVisual" type="ColorRect" parent="Ground" unique_id=1956540515]
offset_left = -1000.0
offset_right = 2000.0
offset_bottom = 50.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="LeftWall" type="StaticBody2D" parent="." unique_id=1491732730]
position = Vector2(-500, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall" unique_id=768712240]
shape = SubResource("WorldBoundaryShape2D_left")

[node name="RightWall" type="StaticBody2D" parent="." unique_id=1470551513]
position = Vector2(1970, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall" unique_id=955195056]
shape = SubResource("WorldBoundaryShape2D_right")

[node name="PlayerSpawn" type="Marker2D" parent="." unique_id=69558737]
position = Vector2(-200, 200)

[node name="AISpawn" type="Marker2D" parent="." unique_id=2113285011]
position = Vector2(200, 200)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="." unique_id=376006675]
_spawnable_scenes = PackedStringArray("uid://c3m2ywy7v6qfw")
spawn_path = NodePath("..")

[node name="UI" type="CanvasLayer" parent="." unique_id=715525500]

[node name="RoundDisplay" type="Label" parent="UI" unique_id=1005628657]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "ROUND 1"
horizontal_alignment = 1

[node name="PlayerLabel" type="Label" parent="UI" unique_id=2076797168]
offset_left = 50.0
offset_top = 30.0
offset_right = 150.0
offset_bottom = 50.0
text = "PLAYER 1"

[node name="PlayerHealth" type="ProgressBar" parent="UI" unique_id=1888158406]
offset_left = 50.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 75.0
value = 100.0
show_percentage = false

[node name="PlayerUltimate" type="ProgressBar" parent="UI" unique_id=601867553]
offset_left = 50.0
offset_top = 80.0
offset_right = 350.0
offset_bottom = 95.0
show_percentage = false

[node name="AILabel" type="Label" parent="UI" unique_id=1193202985]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 30.0
offset_right = -50.0
offset_bottom = 50.0
grow_horizontal = 0
text = "PLAYER 2"
horizontal_alignment = 2

[node name="AIHealth" type="ProgressBar" parent="UI" unique_id=1656142627]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 75.0
grow_horizontal = 0
value = 100.0
fill_mode = 1
show_percentage = false

[node name="AIUltimate" type="ProgressBar" parent="UI" unique_id=2035616014]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -350.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = 95.0
grow_horizontal = 0
fill_mode = 1
show_percentage = false

[node name="FightText" type="Label" parent="UI" unique_id=1690968610]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "FIGHT!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundTimer" type="Timer" parent="." unique_id=2062350816]
wait_time = 3.0
one_shot = true

[node name="RestartTimer" type="Timer" parent="." unique_id=2122424087]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
